Changed to block style

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Aarnival - AWS-asiantuntija",
+  "name": "Aarnival - tiedonhallintaa ja sovelluskehitystä AWS-ympäristössä",
   "icons": [
     {
       "src": "favicon16.png",
