--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "npm": "^5.5.1",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-device-detect": "^1.6.1",
     "react-dnd": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
