--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Aarnival - AWS-asiantuntija",
-  "name": "Aarnival - tiedonhallintaa ja sovelluskehitystä AWS-ympäristössä",
+  "name": "Aarnival - Liiketoimintamallinnetut digitaaliset ratkaisut pilviympäristössä",
+  "short_name": "Liiketoimintamallinnetut digitaaliset ratkaisut - Aarnival",
   "icons": [
     {
       "src": "favicon16.png",
